--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,6 @@
     <!-- Botón para evaluar última jugada -->
     <a href="/evaluar" id="btn-evaluar" role="button" aria-label="Evaluar última jugada">Evaluar Última Jugada</a>
 
-    <script src="{{ url_for('static', filename='js/index.js') }}"></script>
+    <script src="/static/js/index.js"></script>
   </body>
 </html>
